Apicar sistema de grid

--- a/index.html
+++ b/index.html
@@ -8,22 +8,31 @@
 
 </head>
 <body>
-	<div class="container-fluid" style="background-color:red">
-		<p>Olá mundo</p>
-		<table class="table table-hover table-striped">
-			<tr>
-				<th>#</th>
-				<th>Cursos</th>
-			</tr>
-			<tr>
-				<td>1</td>
-				<td>Bootstrap</td>
-			</tr>
-			<tr>
-				<td>2</td>
-				<td>JS</td>
-			</tr>
-		</table>
+	<div class="container" style="background-color:gray; padding: 100px 0px">
+    <div class="row" style="background-color: magenta">
+      <div class="col-12">
+        <p>MENU</p>
+      </div>
+    </div>
+    <div class="row">
+      <div class="col-2" style="background-color: red">
+        <p>Olá mundo</p>
+      </div>
+      <div class="col-8" style="background-color: blue">
+        <p>Olá mundo 2</p>
+      </div>
+      <div class="col-2" style="background-color: green">
+        <p>Olá mundo pela terceira vez</p>
+      </div>
+    </div>
+    <div class="row">
+      <div class="col-6" style="background-color: black">
+        <p>Rodapé</p>
+      </div>
+      <div class="col-6" style="background-color: yellow">
+        <p>Rodapé 2</p>
+      </div>
+    </div>
 	</div>
 
 	<footer>
