--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 
 	<!-- CSS -->
 	<link href="public/css/bootstrap.min.css" rel="stylesheet">
-
+  <style>p{ padding: 50px } </style>
 </head>
 <body>
 	<div class="container" style="background-color:gray; padding: 100px 0px">
@@ -15,21 +15,21 @@
       </div>
     </div>
     <div class="row">
-      <div class="col-2" style="background-color: red">
+      <div class="col-xl-2 col-sm-12" style="background-color: red">
         <p>Olá mundo</p>
       </div>
-      <div class="col-8" style="background-color: blue">
+      <div class="col-xl-8 col-sm-12" style="background-color: blue">
         <p>Olá mundo 2</p>
       </div>
-      <div class="col-2" style="background-color: green">
+      <div class="col-xl-2 col-sm-12" style="background-color: green">
         <p>Olá mundo pela terceira vez</p>
       </div>
     </div>
     <div class="row">
-      <div class="col-6" style="background-color: black">
+      <div class="col-xl-6 col-sm-12" style="background-color: black">
         <p>Rodapé</p>
       </div>
-      <div class="col-6" style="background-color: yellow">
+      <div class="col-xl-6 col-sm-12" style="background-color: yellow">
         <p>Rodapé 2</p>
       </div>
     </div>
