--- a/index.html
+++ b/index.html
@@ -1,43 +1,29 @@
 <!doctype html>
 <html>
 <head>
-	<title>Meu primeiro site com Bootstrap</title>
-
-	<!-- CSS -->
-	<link href="public/css/bootstrap.min.css" rel="stylesheet">
-  <style>p{ padding: 50px } </style>
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
 </head>
 <body>
-	<div class="container" style="background-color:gray; padding: 100px 0px">
-    <div class="row" style="background-color: magenta">
-      <div class="col-12">
-        <p>MENU</p>
-      </div>
-    </div>
-    <div class="row">
-      <div class="col-xl-2 col-sm-12" style="background-color: red">
-        <p>Olá mundo</p>
-      </div>
-      <div class="col-xl-8 col-sm-12" style="background-color: blue">
-        <p>Olá mundo 2</p>
-      </div>
-      <div class="col-xl-2 col-sm-12" style="background-color: green">
-        <p>Olá mundo pela terceira vez</p>
-      </div>
-    </div>
-    <div class="row">
-      <div class="col-xl-6 col-sm-12" style="background-color: black">
-        <p>Rodapé</p>
-      </div>
-      <div class="col-xl-6 col-sm-12" style="background-color: yellow">
-        <p>Rodapé 2</p>
-      </div>
-    </div>
-	</div>
+  <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
+  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
 
-	<footer>
-		<script src="public/js/jquery.js"></script>
-		<script src="public/js/bootstrap.bundle.min.js"></script>
-	</footer>
+  <header>
+    <nav class="navbar navbar-dark bg-dark text-light">
+      <a class="navbar-brand">Navbar</a>
+      <form class="form-inline">
+        <input class="form-control mr-sm-2" type="search" placeholder="Pesquisar" aria-label="Pesquisar">
+        <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Pesquisar</button>
+      </form>
+    </nav>
+  </header>
+
+  <div class="container text-center">
+    <br/>
+    <h1>Bootstrap starter template</h1>
+    <p class="lead">
+      Use this document as a way to quickly start any new project.<br>All you get is this text and a mostly barebones HTML document.
+    </p>
+  </div>
 </body>
 </html>
