--- a/index.html
+++ b/index.html
@@ -8,12 +8,12 @@
 </head>
 <body>
   <div class="container">
-    <h1>Título H1</h1>
-    <h2>Título H2</h2>
-    <h3>Título H3</h3>
-    <h4>Título H4</h4>
-    <h5>Título H5</h5>
-    <h6>Título H6</h6>
+    <h1>Título 1</h1>
+    <h1 class="display-1">Título 2</h1>
+    <h1 class="display-2">Título 3</h1>
+    <h1 class="display-3">Título 4</h1>
+    <h1 class="display-4">Título 5</h1>
+
     <p>Meu parágrafo</p>
   </div>
 
