--- a/index.html
+++ b/index.html
@@ -8,37 +8,10 @@
 </head>
 <body>
   <div class="container">
-    <table class="table">
-      <thead class="thead-dark">
-        <tr>
-          <th>id</th>
-          <th>Curso</th>
-          <th>Nota</th>
-        </tr>
-      </thead>
-      <tbody>
-        <tr class="bg-danger">
-          <td>1</td>
-          <td>Terminal Linux</td>
-          <td>4.6</td>
-        </tr>
-        <tr class="bg-warning">
-          <td>2</td>
-          <td>Phyton & MySQL</td>
-          <td>4.4</td>
-        </tr>
-        <tr class="bg-info">
-          <td>3</td>
-          <td>Curso de Programação com Perl</td>
-          <td>4.7</td>
-        </tr>
-        <tr class="bg-success">
-          <td>4</td>
-          <td>CodeIgniter</td>
-          <td>4.4</td>
-        </tr>
-      </tbody>
-    </table>
+    <h1>Componentes</h1>
+    <div class="alert alert-info">
+      O programa foi executado com sucesso. <a href="#" class="alert-link">Clique aqui para saber mais</a>
+    </div>
   </div>
 
   <footer>
