--- a/index.html
+++ b/index.html
@@ -8,10 +8,10 @@
 </head>
 <body>
   <div class="container">
-    <h1>Componentes</h1>
-    <div class="alert alert-info">
-      O programa foi executado com sucesso. <a href="#" class="alert-link">Clique aqui para saber mais</a>
-    </div>
+    <button class="btn btn-primary">Clique aqui</button>
+    <button class="btn btn-warning">Clique aqui</button>
+    <a href="#" class="btn btn-danger">Clique aqui</a>
+    <input type="submit" class="btn btn-danger" value="Clique aqui">
   </div>
 
   <footer>
