Cores e tamanhos para Botões

--- a/index.html
+++ b/index.html
@@ -12,6 +12,18 @@
     <button class="btn btn-warning">Clique aqui</button>
     <a href="#" class="btn btn-danger">Clique aqui</a>
     <input type="submit" class="btn btn-danger" value="Clique aqui">
+    <br><br>
+    <button class="btn btn-outline-primary">Clique aqui</button>
+    <button class="btn btn-outline-warning">Clique aqui</button>
+    <a href="#" class="btn btn-outline-danger">Clique aqui</a>
+    <input type="submit" class="btn btn-outline-danger" value="Clique aqui">
+    <br><br>
+    <button class="btn btn-info btn-lg">Clique aqui</button>
+    <button class="btn btn-info btn-sm">Clique aqui</button>
+    <br><br>
+    <button class="btn btn-primary btn-block btn-sm">Clique aqui</button>
+    <button class="btn btn-primary btn-block btn-lg">Clique aqui</button>
+    <button class="btn btn-primary btn-block">Clique aqui</button>
   </div>
 
   <footer>
