--- a/index.html
+++ b/index.html
@@ -10,37 +10,25 @@
   <div class="container">
     <h1>Formulários</h1>
     <form>
-      <div class="row">
-        <div class="col">
-          <div class="form-group">
-            <label>Digite o nome do usuário</label>
-            <input type="text" class="form-control form-control-lg" name="usuario" placeholder="Insira um texto aqui">
-          </div>
-        </div>
-
-        <div class="col">
-          <div class="form-group">
-            <label>Digite a senha</label>
-            <input type="text" class="form-control form-control-lg" name="senha" placeholder="Digite a senha">
-          </div>
+      <div class="btn-group">
+        <a href="#" class="btn btn-primary active">Link 1</a>
+        <a href="#" class="btn btn-secondary">Link 2</a>
+        <a href="#" class="btn btn-outline-warning">Link 3</a>
+      </div>
+      <br><br>
+      <div class="input-group">
+        <input type="text" class="form-control" placeholder="Digite um endereço de email">
+        <div class="input-group-append">
+          <span class="input-group-text">@alanfacchini.com</span>
         </div>
       </div>
-
-      <div class="form-group">
-        <select class="form-control">
-          <option>1</option>
-          <option>2</option>
-          <option>3</option>
-        </select>
-
-        <input type="range" class="form-control-range">
-
-        <input type="checkbox" class="form-check-input">
-        <label>Clique aqui</label>
-
-        <input type="file" class="form-control" name="">
+      <br><br>
+      <div class="input-group">
+        <div class="input-group-append">
+          <span class="input-group-text">R$</span>
+        </div>
+        <input type="text" class="form-control" placeholder="Digite um valor">
       </div>
-      <input type="submit" class="btn btn-secondary btn-lg" value="Enviar" name="enviar">
     </form>
   </div>
 
