--- a/index.html
+++ b/index.html
@@ -8,26 +8,29 @@
 </head>
 <body>
   <div class="container">
-    <h1>Formulários</h1>
+    <h1>Barras de progresso</h1>
     <form>
-      <div class="btn-group">
-        <a href="#" class="btn btn-primary active">Link 1</a>
-        <a href="#" class="btn btn-secondary">Link 2</a>
-        <a href="#" class="btn btn-outline-warning">Link 3</a>
+      <div class="progress">
+        <div class="progress-bar bg-success" style="width: 75%"></div>
+      </div>
+      <br>
+      <div class="progress">
+        <div class="progress-bar bg-primary" style="width: 55%"></div>
+      </div>
+      <br>
+      <div class="progress">
+        <div class="progress-bar bg-warning" style="width: 35%"></div>
+      </div>
+      <br>
+      <div class="progress">
+        <div class="progress-bar bg-danger" style="width: 85%"></div>
       </div>
       <br><br>
-      <div class="input-group">
-        <input type="text" class="form-control" placeholder="Digite um endereço de email">
-        <div class="input-group-append">
-          <span class="input-group-text">@alanfacchini.com</span>
-        </div>
-      </div>
-      <br><br>
-      <div class="input-group">
-        <div class="input-group-append">
-          <span class="input-group-text">R$</span>
-        </div>
-        <input type="text" class="form-control" placeholder="Digite um valor">
+      <div class="progress">
+        <div class="progress-bar bg-success" style="width: 20%">20%</div>
+        <div class="progress-bar bg-primary progress-bar-striped" style="width: 45%">45%</div>
+        <div class="progress-bar bg-warning" style="width: 5%">5%</div>
+        <div class="progress-bar bg-danger" style="width: 30%">30%</div>
       </div>
     </form>
   </div>
