--- a/index.html
+++ b/index.html
@@ -7,33 +7,18 @@
   <link href="public/css/bootstrap.min.css" rel="stylesheet">
 </head>
 <body>
-  <div class="container">
-    <h1>Barras de progresso</h1>
-    <form>
-      <div class="progress">
-        <div class="progress-bar bg-success" style="width: 75%"></div>
+  <h1>Jumbotron & Cards</h1>
+  <form>
+    <div class="jumbotron">
+      <div class="container-fluid">
+        <h1 class="display-4">Olá mundo!</h1>
+        <p class="lead">Este é o meu primeiro jumbotron</p>
+        <br>
+        <p>Clique para saber mais</p>
+        <a href="#" class="btn btn-primary">Saiba mais</a>
       </div>
-      <br>
-      <div class="progress">
-        <div class="progress-bar bg-primary" style="width: 55%"></div>
-      </div>
-      <br>
-      <div class="progress">
-        <div class="progress-bar bg-warning" style="width: 35%"></div>
-      </div>
-      <br>
-      <div class="progress">
-        <div class="progress-bar bg-danger" style="width: 85%"></div>
-      </div>
-      <br><br>
-      <div class="progress">
-        <div class="progress-bar bg-success" style="width: 20%">20%</div>
-        <div class="progress-bar bg-primary progress-bar-striped" style="width: 45%">45%</div>
-        <div class="progress-bar bg-warning" style="width: 5%">5%</div>
-        <div class="progress-bar bg-danger" style="width: 30%">30%</div>
-      </div>
-    </form>
-  </div>
+    </div>
+  </form>
 
   <footer>
     <!--JS    -->
