--- a/index.html
+++ b/index.html
@@ -1,23 +1,23 @@
 <!doctype html>
 <html>
 <head>
-  <title>Formulários</title>
+  <title>Página de login</title>
+  <meta charset="UTF-8">
 
   <!-- Bootstrap core CSS -->
   <link href="public/css/bootstrap.min.css" rel="stylesheet">
+  <link href="login.css" rel="stylesheet">
 </head>
-<body>
-  <h1>Jumbotron & Cards</h1>
-  <form>
-    <div class="jumbotron">
-      <div class="container-fluid">
-        <h1 class="display-4">Olá mundo!</h1>
-        <p class="lead">Este é o meu primeiro jumbotron</p>
-        <br>
-        <p>Clique para saber mais</p>
-        <a href="#" class="btn btn-primary">Saiba mais</a>
-      </div>
+<body class="text-center">
+  <form class="form-signin">
+    <img class="mb-4" src="logo.svg" width="250px">
+    <h1 class="mb-3">Login</h1>
+    <input type="email" autofocus name="email" class="form-control" placeholder="Digite seu email" required>
+    <input type="password" name="senha" class="form-control" placeholder="Digite sua senha" required>
+    <div class="checkbox mb-3">
+      <label><input type="checkbox" name="lembrar"> Lembrar-me</label>
     </div>
+    <input type="submit" name="enviar" value="Entrar" class="btn btn-primary btn-lg btn-block">
   </form>
 
   <footer>
