--- a/index.html
+++ b/index.html
@@ -1,24 +1,73 @@
 <!doctype html>
 <html>
 <head>
-  <title>Página de login</title>
-  <meta charset="UTF-8">
+  <title>Formulários</title>
 
   <!-- Bootstrap core CSS -->
   <link href="public/css/bootstrap.min.css" rel="stylesheet">
-  <link href="login.css" rel="stylesheet">
 </head>
-<body class="text-center">
-  <form class="form-signin">
-    <img class="mb-4" src="logo.svg" width="250px">
-    <h1 class="mb-3">Login</h1>
-    <input type="email" autofocus name="email" class="form-control" placeholder="Digite seu email" required>
-    <input type="password" name="senha" class="form-control" placeholder="Digite sua senha" required>
-    <div class="checkbox mb-3">
-      <label><input type="checkbox" name="lembrar"> Lembrar-me</label>
+<body>
+  <div class="container-fluid">
+    <h1>Jumbotron & Cards</h1>
+  </div>
+
+  <div class="jumbotron">
+    <div class="container-fluid">
+      <h1 class="display-4">Olá mundo!</h1>
+      <p class="lead">Este é o meu primeiro jumbotron</p>
+      <br>
+      <p>Clique para saber mais</p>
+      <a href="#" class="btn btn-primary">Saiba mais</a>
     </div>
-    <input type="submit" name="enviar" value="Entrar" class="btn btn-primary btn-lg btn-block">
-  </form>
+  </div>
+
+  <div class="container-fluid">
+    <div class="row">
+      <div class="col-3">
+        <div class="card">
+          <img src="public/img/natureza4.jpeg" class="card-img-top">
+          <div class="card-body">
+            <h5 class="card-title">Meu card 1</h5>
+            <p class="card-text">Olá este é o meu primeiro card. Aqui ficará descrito as informações que quero exibir.</p>
+            <a href="#" class="btn btn-primary">Saiba mais</a>
+          </div>
+        </div>
+      </div>
+
+      <div class="col-3">
+        <div class="card">
+          <img src="public/img/natureza4.jpeg" class="card-img-top">
+          <div class="card-body">
+            <h5 class="card-title">Meu card 2</h5>
+            <p class="card-text">Olá este é o meu primeiro card. Aqui ficará descrito as informações que quero exibir.</p>
+            <a href="#" class="btn btn-primary">Saiba mais</a>
+          </div>
+        </div>
+      </div>
+
+      <div class="col-3">
+        <div class="card">
+          <img src="public/img/natureza4.jpeg" class="card-img-top">
+          <div class="card-body">
+            <h5 class="card-title">Meu card 3</h5>
+            <p class="card-text">Olá este é o meu primeiro card. Aqui ficará descrito as informações que quero exibir.</p>
+            <a href="#" class="btn btn-primary">Saiba mais</a>
+          </div>
+        </div>
+      </div>
+
+      <div class="col-3">
+        <div class="card">
+          <img src="public/img/natureza4.jpeg" class="card-img-top">
+          <div class="card-body">
+            <h5 class="card-title">Meu card 4</h5>
+            <p class="card-text">Olá este é o meu primeiro card. Aqui ficará descrito as informações que quero exibir.</p>
+            <a href="#" class="btn btn-primary">Saiba mais</a>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
 
   <footer>
     <!--JS    -->
