Formulários: Bordas arredondadas

--- a/index.html
+++ b/index.html
@@ -24,8 +24,8 @@
   <div class="container-fluid">
     <div class="row">
       <div class="col-3">
-        <div class="card">
-          <img src="public/img/natureza4.jpeg" class="card-img-top">
+        <div class="card border border-info">
+          <img src="public/img/natureza4.jpeg" class="rounded-top">
           <div class="card-body">
             <h5 class="card-title">Meu card 1</h5>
             <p class="card-text">Olá este é o meu primeiro card. Aqui ficará descrito as informações que quero exibir.</p>
@@ -35,8 +35,8 @@
       </div>
 
       <div class="col-3">
-        <div class="card">
-          <img src="public/img/natureza4.jpeg" class="card-img-top">
+        <div class="card border border-left-0 border-right-0">
+          <img src="public/img/natureza4.jpeg" class="rounded-circle">
           <div class="card-body">
             <h5 class="card-title">Meu card 2</h5>
             <p class="card-text">Olá este é o meu primeiro card. Aqui ficará descrito as informações que quero exibir.</p>
@@ -46,8 +46,8 @@
       </div>
 
       <div class="col-3">
-        <div class="card">
-          <img src="public/img/natureza4.jpeg" class="card-img-top">
+        <div class="card border border-primary">
+          <img src="public/img/natureza4.jpeg" class="rounded-pill">
           <div class="card-body">
             <h5 class="card-title">Meu card 3</h5>
             <p class="card-text">Olá este é o meu primeiro card. Aqui ficará descrito as informações que quero exibir.</p>
@@ -57,7 +57,7 @@
       </div>
 
       <div class="col-3">
-        <div class="card">
+        <div class="card border border-warning">
           <img src="public/img/natureza4.jpeg" class="card-img-top">
           <div class="card-body">
             <h5 class="card-title">Meu card 4</h5>
@@ -66,6 +66,7 @@
           </div>
         </div>
       </div>
+
     </div>
   </div>
 
