--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
   <div class="container-fluid">
     <div class="row">
       <div class="col-3">
-        <div class="card border border-info">
+        <div class="card border border-info bg-warning">
           <img src="public/img/natureza4.jpeg" class="rounded-top">
           <div class="card-body">
             <h5 class="card-title">Meu card 1</h5>
@@ -67,6 +67,24 @@
         </div>
       </div>
 
+    </div>
+
+    <div class="row">
+      <div class="col-12">
+        <p class="display-4">Trabalhando com texto</p>
+        <p class="text-left">Meu texto</p>
+        <p class="text-center">Meu texto</p>
+        <p class="text-right">Meu texto</p>
+
+        <p class="text-primary">Meu texto</p>
+        <p class="text-secondary">Meu texto</p>
+        <p class="text-warning">Meu texto</p>
+        <p class="text-info">Meu texto</p>
+        <p class="text-success">Meu texto</p>
+        <p class="text-danger">Meu texto</p>
+        <p class="text-light bg-dark">Meu texto</p>
+        <p class="text-dark">Meu texto</p>
+      </div>
     </div>
   </div>
 
