--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <button class="btn btn-secondary" data-toggle="modal" data-target="#conteudoModal">Ativar modal</button>
 
     <div id="conteudoModal" class="modal fade">
-      <div class="modal-dialog">
+      <div class="modal-dialog modal-dialog-centered">
         <div class="modal-content">
 
           <div class="modal-header">
@@ -27,7 +27,17 @@
           </div>
 
           <div class="modal-body">
-            Texto do meu modal
+            <div class="row">
+              <div class="col-4" style="background-color: red">
+                Texto do meu modal parte 1
+              </div>
+              <div class="col-4" style="background-color: blue">
+                Texto do meu modal parte 2
+              </div>
+              <div class="col-4" style="background-color: green">
+                Texto do meu modal parte 3
+              </div>
+            </div>
           </div>
 
           <div class="modal-footer">
