--- a/index.html
+++ b/index.html
@@ -11,47 +11,12 @@
 </head>
 <body>
   <div class="container">
-    <h1>Modal</h1>
+    <h1>Collapse</h1>
 
-    <button class="btn btn-secondary" data-nome="Alan" data-toggle="modal" data-target="#conteudoModal">Modal 1</button>
-    <button class="btn btn-secondary" data-nome="Moacir" data-toggle="modal" data-target="#conteudoModal">Modal 2</button>
+    <a class="btn btn-warning" data-toggle="collapse" href="#secreto" data-target="#secreto">Mostre mais</a>
 
-    <div id="conteudoModal" class="modal fade">
-      <div class="modal-dialog">
-        <div class="modal-content">
-
-          <div class="modal-header">
-            <h4 class="modal-title">Meu modal</h4>
-            <button class="close" data-dismiss="modal" arial-label="Fechar">
-              <span arial-hidden="true">&times;</span>
-            </button>
-          </div>
-
-          <div class="modal-body">
-            <div class="row">
-              <div class="col-4">
-                <span>Destinatário: </span>
-              </div>
-              <div class="col-8">
-                <input type="text" name="para" class="form-control">
-              </div>
-            </div>
-            <br><br>
-            <div class="row">
-              <div class="col-4">
-                <span>Mensagem: </span>
-              </div>
-              <div class="col-8">
-                <textarea class="form-control"></textarea>
-              </div>
-            </div>
-          </div>
-
-          <div class="modal-footer">
-            <button class="btn btn-secondary" data-dismiss="modal">Fechar</button>
-          </div>
-        </div>
-      </div>
+    <div class="collapse" id="secreto">
+      Mensagem secreta.
     </div>
 
   </div>
