--- a/index.html
+++ b/index.html
@@ -10,38 +10,55 @@
 
 </head>
 <body>
-  <div class="container">
-    <h1>Scrollspy</h1>
+  <div class="container" style="background-color: black">
+    <h1>Carousel</h1>
 
-    <div class="row">
-      <div class="col-4">
-        <div id="livro" class="list-group">
-          <a class="list-group-item list-group-item-action" href="#c1">Capítulo 1</a>
-          <a class="list-group-item list-group-item-action" href="#c2">Capítulo 2</a>
-          <a class="list-group-item list-group-item-action" href="#c3">Capítulo 3</a>
-          <a class="list-group-item list-group-item-action" href="#c4">Capítulo 4</a>
-          <a class="list-group-item list-group-item-action" href="#c5">Capítulo 5</a>
+    <div id="meu_slideshow" class="carousel slide" data-ride="carousel" style="text-align: center">
+
+      <ol class="carousel-indicators">
+        <li data-target="#meu_slideshow" data-slide-to="0" class="active"></li>
+        <li data-target="#meu_slideshow" data-slide-to="1"></li>
+        <li data-target="#meu_slideshow" data-slide-to="2"></li>
+      </ol>
+
+      <div class="carousel-inner">
+        <div class="carousel-item active">
+          <img src="public/img/natureza1.jpg" alt="Imagem de um rio e de uma ponte sobre um rio" style="max-height: 500px">
+
+          <div class="carousel-caption" d-none d-md-block>
+            <h5>Natureza 1</h5>
+            <p>Ponte sobre o rio</p>
+          </div>
+        </div>
+
+        <div class="carousel-item">
+          <img src="public/img/natureza2.jpg" alt="Floresta no outono" style="max-height: 500px">
+
+          <div class="carousel-caption" d-none d-md-block>
+            <h5>Natureza 2</h5>
+            <p>Tarde de Outono</p>
+          </div>
+        </div>
+
+        <div class="carousel-item">
+          <img src="public/img/natureza3.jpg" alt="Nascer do sol" style="max-height: 500px">
+
+          <div class="carousel-caption" d-none d-md-block>
+            <h5>Natureza 3</h5>
+            <p>Nascer do sol</p>
+          </div>
         </div>
       </div>
 
-      <div class="col-8" id="caixaLivro" style="position: relative; height: 500px; overflow: auto">
-        <div data-spy="scroll" data-target="#livro" data-offset="0">
-          <h3 id="c1">Capítulo 1</h3>
-          <p>But I must explain to you how all this mistaken idea of denouncing pleasure and praising pain was born and I will give you a complete account of the system, and expound the actual teachings of the great explorer of the truth, the master-builder of human happiness. No one rejects, dislikes, or avoids pleasure itself, because it is pleasure, but because those who do not know how to pursue pleasure rationally encounter consequences that are extremely painful. Nor again is there anyone who loves or pursues or desires to obtain pain of itself, because it is pain, but because occasionally circumstances occur in which toil and pain can procure him some great pleasure. To take a trivial example, which of us ever undertakes laborious physical exercise, except to obtain some advantage from it? But who has any right to find fault with a man who chooses to enjoy a pleasure that has no annoying consequences, or one who avoids a pain that produces no resultant pleasure?</p>
+      <a class="carousel-control-prev" href="#meu_slideshow" data-slide="prev">
+        <span class="carousel-control-prev-icon"></span>
+        <span class="sr-only">Anterior</span>
+      </a>
 
-          <h3 id="c2">Capítulo 2</h3>
-          <p>But I must explain to you how all this mistaken idea of denouncing pleasure and praising pain was born and I will give you a complete account of the system, and expound the actual teachings of the great explorer of the truth, the master-builder of human happiness. No one rejects, dislikes, or avoids pleasure itself, because it is pleasure, but because those who do not know how to pursue pleasure rationally encounter consequences that are extremely painful. Nor again is there anyone who loves or pursues or desires to obtain pain of itself, because it is pain, but because occasionally circumstances occur in which toil and pain can procure him some great pleasure. To take a trivial example, which of us ever undertakes laborious physical exercise, except to obtain some advantage from it? But who has any right to find fault with a man who chooses to enjoy a pleasure that has no annoying consequences, or one who avoids a pain that produces no resultant pleasure?</p>
-
-          <h3 id="c3">Capítulo 3</h3>
-          <p>But I must explain to you how all this mistaken idea of denouncing pleasure and praising pain was born and I will give you a complete account of the system, and expound the actual teachings of the great explorer of the truth, the master-builder of human happiness. No one rejects, dislikes, or avoids pleasure itself, because it is pleasure, but because those who do not know how to pursue pleasure rationally encounter consequences that are extremely painful. Nor again is there anyone who loves or pursues or desires to obtain pain of itself, because it is pain, but because occasionally circumstances occur in which toil and pain can procure him some great pleasure. To take a trivial example, which of us ever undertakes laborious physical exercise, except to obtain some advantage from it? But who has any right to find fault with a man who chooses to enjoy a pleasure that has no annoying consequences, or one who avoids a pain that produces no resultant pleasure?</p>
-
-          <h3 id="c4">Capítulo 4</h3>
-          <p>But I must explain to you how all this mistaken idea of denouncing pleasure and praising pain was born and I will give you a complete account of the system, and expound the actual teachings of the great explorer of the truth, the master-builder of human happiness. No one rejects, dislikes, or avoids pleasure itself, because it is pleasure, but because those who do not know how to pursue pleasure rationally encounter consequences that are extremely painful. Nor again is there anyone who loves or pursues or desires to obtain pain of itself, because it is pain, but because occasionally circumstances occur in which toil and pain can procure him some great pleasure. To take a trivial example, which of us ever undertakes laborious physical exercise, except to obtain some advantage from it? But who has any right to find fault with a man who chooses to enjoy a pleasure that has no annoying consequences, or one who avoids a pain that produces no resultant pleasure?</p>
-
-          <h3 id="c5">Capítulo 5</h3>
-          <p>But I must explain to you how all this mistaken idea of denouncing pleasure and praising pain was born and I will give you a complete account of the system, and expound the actual teachings of the great explorer of the truth, the master-builder of human happiness. No one rejects, dislikes, or avoids pleasure itself, because it is pleasure, but because those who do not know how to pursue pleasure rationally encounter consequences that are extremely painful. Nor again is there anyone who loves or pursues or desires to obtain pain of itself, because it is pain, but because occasionally circumstances occur in which toil and pain can procure him some great pleasure. To take a trivial example, which of us ever undertakes laborious physical exercise, except to obtain some advantage from it? But who has any right to find fault with a man who chooses to enjoy a pleasure that has no annoying consequences, or one who avoids a pain that produces no resultant pleasure?</p>
-        </div>
-      </div>
+      <a class="carousel-control-next" href="#meu_slideshow" data-slide="next">
+        <span class="carousel-control-next-icon"></span>
+        <span class="sr-only">Posterior</span>
+      </a>
     </div>
 
   </div>
@@ -50,9 +67,6 @@
     <!--JS    -->
     <script src="public/js/jquery.js"></script>
     <script src="public/js/bootstrap.bundle.min.js"></script>
-    <script>
-      $('#caixaLivro').scrollspy({ target: '#livro' })
-    </script>
   </footer>
 </body>
 
